<?xml version="1.0" encoding="UTF-8"?>
<ScrollView
    tools:context=".activities.RegistrationActivity"
android:padding="15dp"
    android:orientation="horizontal"
    android:background="@color/cardview_dark_background"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


<LinearLayout android:padding="5dp"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/backgroundcar">


    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        tools:layout_editor_absoluteY="111dp"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#F9F9FA"
        android:text="@string/user_registration"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="serif"
        android:id="@+id/textView2z"/>

    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent"
        tools:ignore="MissingConstraints"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="#fff"
        android:text="@string/parkeasy"
        android:gravity="center"
        android:fontFamily="serif"
        android:id="@+id/textViewd2z"/>


    <RelativeLayout android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center">

    <EditText android:padding="10dp"

        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="#fff"

        android:fontFamily="serif"
        android:id="@+id/editText_nmfull"
        android:textColorHint="#fff"
        android:inputType="textPersonName"
        android:hint="@string/full_name" android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:autofillHints="" />

    <EditText android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="#fff"
        android:layout_marginTop="55dp"
        android:fontFamily="serif"
        android:id="@+id/editText_phnnumReg"
        android:textColorHint="#fff"
        android:inputType="number"
        android:hint="@string/phone_number"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:autofillHints="" />

    <EditText android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="#fff"
        android:layout_marginTop="110dp"
        android:fontFamily="serif"
        android:id="@+id/editText_add"
        android:textColorHint="#fff"
        android:inputType="textPostalAddress"
        android:hint="@string/address"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:autofillHints="" />


    <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="165dp">


    <TextView android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="left"
        android:textColor="#fff"
        android:fontFamily="serif"
        android:id="@+id/editTexat_passwosardsLogIn"
        android:textColorHint="#fff"
        android:hint="@string/vehicle"
        android:ems="10" />


    <RadioGroup android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="right"
        android:id="@+id/radioGrp"
        android:paddingTop="5dp">

    <RadioButton android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="#fff"
        android:text="@string/car"
        android:fontFamily="serif"
        android:id="@+id/radioOne"
        android:paddingLeft="5dp"
        android:checked="false"
        android:paddingStart="5dp" />

    <RadioButton android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="#fff"
        android:text="@string/bike"
        android:fontFamily="serif"
        android:id="@+id/radioTwo"
        android:paddingLeft="5dp"
        android:checked="false"
        android:paddingStart="5dp" />

</RadioGroup>

</LinearLayout>

    <EditText android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="#fff"
        android:layout_marginTop="220dp"
        android:fontFamily="serif"
        android:id="@+id/editText_VehicleRegNum"
        android:textColorHint="#fff"
        android:inputType="text"
        android:hint="@string/vehicle_s_reg_no"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:autofillHints="" />

    <EditText android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="#fff"
        android:layout_marginTop="270dp"
        android:fontFamily="serif"
        android:id="@+id/editText_passwasdordsReg"
        android:textColorHint="#fff"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:autofillHints="" />

    <TextView android:padding="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        tools:ignore="RtlCompat"
        android:textStyle="bold"
        android:textSize="23sp"
        android:text="@string/save"
        android:layout_marginTop="325dp"
        android:fontFamily="serif"
        android:id="@+id/button_regSave"
        android:textAllCaps="false"
        android:textAlignment="center"/>


</RelativeLayout>


    <RelativeLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp">

    <TextView android:padding="3dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:ignore="RtlCompat"
        android:textSize="17sp"
        android:textColor="#B2D9F6"
        android:text="@string/already_registered_need_to_login"
        android:fontFamily="serif"
        android:id="@+id/button_regdffdisterLogIn"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>

</LinearLayout>

</ScrollView>